
PERFORMANCE OPTIMIZATIONS:

MIGRATE TO PHETCOMMON:

CLEANUP:
- add cursors to all things that are interactive
- setPickable(false) on non-interactive nodes
- rescale image files to minimize file size
- disable all debug output
- optimize memory management by reusing mutable objects
- javadoc
- organize imports


DONE:
7/13/08 - implement model-view transform for linear scale bar graph
7/13/08 - add x spacing between beaker ticks and labels
7/13/08 - make beaker's minor ticks noticeably short than major ticks
7/13/08 - move bar drag handles to top-left edge of bars so that they don't obscure bar values
7/13/08 - implement bar updaters in terms of BarGraphNode.calculateBarLength
7/12/08 - rename "soda" to "soda pop"
7/12/08 - move origin to the geometric center of drag handle
7/12/08 - fix horizontal positioning of bars and their drag handles
7/12/08 - if a bar is taller than the chart, give it an arrowhead and hide its drag handle
7/12/08 - add stubs to determine bar heights from model and graph settings
7/12/08 - add all view code to create bars and position drag handles
7/12/08 - make bar graph drag handles visible
******* version 0.00.16 (23133)
7/12/08 - hide bar graph drag handles
7/12/08 - make alternate Molecule Count view the primary view
******* version 0.00.15 (23115)
7/11/08 - remove dependency on jfreechart
7/11/08 - add bar drag handles, they don't do anything yet
7/11/08 - make chart a big shorter so that Linear radio button has some space below it on WinXP
7/11/08 - line up pH slider ticks with bar graph ticks, using TickAlignmentNode
7/11/08 - implement Rest All for all controls
7/11/08 - refactor linear and log y-axes into separate classes
******* version 0.00.14 (23105)
7/11/08 - when switching from log to linear scale, reset y-axis range so that it's zoomed all the way out
7/11/08 - add y-axis label to bar graph, remove units from upper-left corner of graph interior
7/11/08 - handle 10^1 display differently, for example display 9x10 as 90